[project]
name = "agent-arsenal"
version = "0.1.0"
description = "A global CLI tool for coding agents to use in development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pyjwt>=2.8.0",
    "jinja2>=3.0.0",
]

[project.scripts]
arsenal = "agent_arsenal.main:cli"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
agent-arsenal = { workspace = true }

[tool.uv]
dev-dependencies = [
    "watchfiles>=0.21.0", # For hot reload
    "pytest>=7.0.0", # For testing
    "pytest-xdist>=3.0.0", # Parallel tests (-n auto)
    "pytest-cov>=4.0.0", # Coverage (test-cov target)
    "git-changelog>=2.7.1",
    "types-PyYAML", # Type stubs for PyYAML
    "mypy>=1.0.0", # Type checker
    "ruff", # Linter
]
package = true

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = false  # Disable unreachable statement warnings

[tool.bandit]
exclude = ["tests/", ".venv/", "*/test_*.py"]
skips = [
    "B404",  # subprocess import - intentional for sandbox execution
    "B603",  # subprocess.run - intentional for running known commands
    "B701",  # jinja2 autoescape - templates are not HTML
    "B324",  # hashlib md5 - used for non-cryptographic hashing
    "B107",  # hardcoded password default - intentional for JWT handling
    "B311",  # random usage - for UUID generation, not security
    "B110",  # try/except/pass - for graceful shutdown in watcher
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008", "B904"]
